# shenlan-slam

changeCamPara/: CMakeLists.txt  main.cpp
pytorch_practice-DogCat/: config.py  main.py  test.py  tutorial_batchtrain.py
pytorch_practice-DogCat/data/: dataset.py
pytorch_practice-DogCat/models/: AlexNet.py  ResNet34.py  __init__.py
pytorch_practice-DogCat/utils/: visualize.py
shenlan-slam/第1讲/3.cmake练习/CMake_Practice/: CMakeLists.txt
shenlan-slam/第2讲/1.熟悉 Eigen 矩阵运算/5.solve_equation/: Matrix_equation.cpp
shenlan-slam/第2讲/6.熟悉 C++11/: 熟悉 C++11.docx
shenlan-slam/第3讲/3.推导 SE(3) 的指数映射/: 推导 SE(3) 的指数映射.docx
shenlan-slam/第3讲/4.SO(3)伴随性质/: 伴随.docx
shenlan-slam/第3讲/5.轨迹的描绘/1.T WC 的平移部分即构成了机器人的轨迹。它的物理意义是什么？为何画出 T WC 的平移/: 1.T WC 的平移部分即构成了机器人的轨迹。它的物理意义是什么？为何画出 T WC 的平移.docx
shenlan-slam/第3讲/5.轨迹的描绘/2.描绘轨迹代码/: CMakeLists.txt  draw_trajectory.cpp
shenlan-slam/第3讲/6.轨迹误差/: CMakeLists.txt  calc_trajectory_error.cpp
shenlan-slam/第4讲/1.图像去畸变/: CMakeLists.txt
shenlan-slam/第4讲/2.双目视差的使用/: disparity.cpp
shenlan-slam/第5讲/1.ORB 特征点/code/: CMakeLists.txt  computeORB.cpp
shenlan-slam/第5讲/2.从E恢复 R,t/code/: CMakeLists.txt  E2Rt.cpp
shenlan-slam/第5讲/3.用 G-N 实现 Bundle Adjustment 中的位姿估计/code/: CMakeLists.txt  GN-BA.cpp
shenlan-slam/第5讲/4.用ICP实现轨迹对齐/code/: ICP.cpp  compare.txt
shenlan-slam/第6讲/1.LK 光流/code/: CMakeLists.txt
shenlan-slam/第6讲/2.直接法/code/: direct_method.cpp
第1讲/5.使用摄像头或视频运行 ORB-SLAM2(附加)/2.ORB-SLAM2目录下CMakeLists.txt 修改⽅案/: CMakeLists修改方案.docx
第1讲/5.使用摄像头或视频运行 ORB-SLAM2(附加)/3.运⾏截图与体会/: ORB-SLAM2 安装-编译-运行过程体会.docx
第2讲/1.熟悉 Eigen 矩阵运算/5.solve_equation/: CMakeLists.txt
第2讲/2.几何运算练习/: 新建文本文档.txt
第2讲/2.几何运算练习/xiao_luobo/: eigenGeometry.cpp
第2讲/4.罗德里格斯公式的证明/: 罗德里格斯公式的证明.docx
第3讲/2.验证向量叉乘的李代数性质/: 验证向量叉乘的李代数性质.docx
第3讲/6.轨迹误差/: 2_trajectory_compare.cpp
第4讲/1.图像去畸变/: undistort_image.cpp
第4讲/2.双目视差的使用/: CMakeLists.txt
第4讲/4.高斯牛顿法的曲线拟合实验/: CMakeLists.txt  gaussnewton.cpp
第5讲/1.ORB 特征点/: 问题.docx
第5讲/3.用 G-N 实现 Bundle Adjustment 中的位姿估计/: 问题.docx
第5讲/4.用ICP实现轨迹对齐/code/: CMakeLists.txt
第6讲/1.LK 光流/code/: optical_flow.cpp
第6讲/2.直接法/: 直接法.docx
第6讲/2.直接法/code/: CMakeLists.txt
